# trik-mspbsl-library

./: .gitignore  CMakeLists.txt  MSPBSL_Device_List.txt  MSPBSL_Factory.cpp
Connections/: MSPBSL_Connection.cpp  MSPBSL_Connection.h  MSPBSL_Connection1xx_2xx_4xx.cpp  MSPBSL_Connection1xx_2xx_4xx.h  MSPBSL_Connection5438Family.cpp  MSPBSL_Connection5438Family.h  MSPBSL_Connection5xx.cpp  MSPBSL_Connection5xx.h  MSPBSL_Connection5xxUART.cpp  MSPBSL_Connection5xxUART.h  MSPBSL_Connection5xxUSB.cpp  MSPBSL_Connection5xxUSB.h  MSPBSL_ConnectionFRAMFamily.cpp  MSPBSL_ConnectionFRAMFamily.h  MSPBSL_Connection_v1_10.cpp  MSPBSL_Connection_v1_10.h  MSPBSL_Connection_v1_3x.cpp  MSPBSL_Connection_v1_3x.h  MSPBSL_Connection_v1_4x.cpp  MSPBSL_Connection_v1_4x.h  MSPBSL_Connection_v1_6x.cpp  MSPBSL_Connection_v1_6x.h  MSPBSL_Connection_v2_1x.cpp  MSPBSL_Connection_v2_1x.h  MSPBSL_Connection_v2_xx.cpp  MSPBSL_Connection_v2_xx.h  MSPBSL_Factory.cpp  MSPBSL_Factory.h
Example/: burner.cpp  main.cpp
Packet_Handlers/: MSPBSL_PacketHandler.cpp  MSPBSL_PacketHandler.h  MSPBSL_PacketHandler1xx_2xx_4xxUART.cpp  MSPBSL_PacketHandler1xx_2xx_4xxUART.h  MSPBSL_PacketHandler5xxUART.cpp  MSPBSL_PacketHandler5xxUART.h  MSPBSL_PacketHandler5xxUSB.cpp  MSPBSL_PacketHandler5xxUSB.h
Physical_Interfaces/: MSPBSL_PhysicalInterface.h  MSPBSL_PhysicalInterfaceSerialUART.cpp  MSPBSL_PhysicalInterfaceSerialUART.h  MSPBSL_PhysicalInterfaceUSB.cpp  MSPBSL_PhysicalInterfaceUSB.h
Utility_Classes/: MSPBSL_CRCEngine.cpp  MSPBSL_CRCEngine.h  MSPBSL_TestResetControl.h
cmake/: Findhidapi.cmake
